# playwright-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_EXAMPLES.md  Makefile  PROJECT_STRUCTURE.md  README.md  TEST_PLAN.md  conftest.py  gemini.md  pyproject.toml  pytest.ini
app/api/: auth_api.py  base_api.py
app/components/: base_component.py  header.py
app/pages/: base_page.py  cart_page.py  checkout_complete_page.py  checkout_info_page.py  checkout_overview_page.py  inventory_page.py  login_page.py
config/: constants.py  settings.py
config/environments/: dev.json  local.json
data/: messages.py  users.py
data/factories/: __init__.py
data/payloads/: __init__.py
fixtures/: api.py  data.py  ui.py
flows/: auth_flow.py  checkout_flow.py
models/: auth.py
tests/: conftest.py
tests/api/: conftest.py
tests/ui/: conftest.py  test_cart.py  test_checkout.py  test_login.py
utils/: logger.py
